@@ -5,7 +5,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -14,20 +13,25 @@ public class Base62Encoder {
     private static final String BASE_62_CHARACTERS = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
 
     public List<Hash> encode(List<Long> numbers) {
-        return numbers.stream()
+        log.info("start encode with number - {}", numbers.get(0));
+
+        List<Hash> hashes = numbers.stream()
                 .map(this::encodeNumber)
                 .map(Hash::new)
-                .collect(Collectors.toList());
+                .toList();
+
+        log.info("finish encode with number - {}", numbers.get(numbers.size() - 1));
+        return hashes;
     }
 
     private String encodeNumber(long number) {
-        StringBuilder sb = new StringBuilder();
+        StringBuilder builder = new StringBuilder();
 
         while (number > 0) {
-            sb.append(BASE_62_CHARACTERS.charAt((int) (number % BASE_62_CHARACTERS.length())));
+            builder.append(BASE_62_CHARACTERS.charAt((int) (number % BASE_62_CHARACTERS.length())));
             number /= BASE_62_CHARACTERS.length();
         }
 
-        return sb.toString();
+        return builder.toString();
     }
 }
